--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-responsive": "^10.0.1",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "swiper": "^11.2.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
