--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.2",
+    "recharts": "^3.1.0",
     "swiper": "^11.2.9"
   },
   "devDependencies": {
