--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.10.0",
     "framer-motion": "^12.19.2",
     "gsap": "^3.13.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
